k8s/traefik/gateway-api/traefik_1_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.96.54.217
  clusterIPs:
  - 10.96.54.217
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    nodePort: 32248
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    nodePort: 31639
    port: 443
    protocol: TCP
    targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer

status:
  loadBalancer: {}
